# pedro-penguin

pedro-backend/: main.py  pyproject.toml  requirements.txt
pedro-frontend/: package-lock.json  package.json
pedro-frontend/app/: page.tsx
pedro-frontend/app/api/chat/: route.js
pedro-frontend/app/api/speak/: route.js
pedro-frontend/app/api/transcribe/: route.js
