[project]
name = "pedro-backend"
version = "0.1.0"
description = "Pedro the Penguin - AI companion for Gloglo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openai-whisper",
    "piper-tts",
    "torch",
    "torchaudio",
    "torchvision",
    "python-multipart>=0.0.28",
]
